[package]
name = "hashring"
version = "0.1.0"
authors = ["Jerome Froelich <jeromefroelich@hotmail.com>"]
description = "A minimal implementation of consistent hashing"
homepage = "https://github.com/jeromefroe/hashring-rs"
repository = "https://github.com/jeromefroe/hashring-rs.git"
documentation = "https://docs.rs/hashring/"
readme = "README.md"
license = "MIT"
keywords = ["consistent", "hashing", "hash", "ring"]

[features]
nightly = []

[dependencies]
rust-crypto = "0.2.36"